<resources>
    <string name="app_name">Checkin</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="welcome">Welcome</string>
    <string name="history">You can check your history in\nyour menu screen </string>
    <string name="username">username</string>
    <string name="password">Password</string>
    <string name="sign_in">sign in</string>
    <string name="about">ABOUT US</string>
    <string name="read">Read More</string>
    <string name="forgot">Password has been sent to your Email!</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="str_name">I hv forgotten my password?</string>
    <string name="title">Help create the mood</string>
    <string name="mobile">Mobile Number</string>
    <string name="confirmation">CONFIRMATION</string>
    <string name="transaction">Your transaction\ncompleted successfully</string>
    <string name="digit">4 Digit secret pin</string>
    <string name="forpaswrd">Forgot Password</string>
    <string name="occupation">Occupation</string>
    <string name="marry"> Are you Married?</string>
    <string name="hospital">HOSPITAL CHECK.IN</string>
    <string name="select">Select Hospital</string>
    <string name="special">Specialization</string>
    <string name="paynow">Pay Now</string>
    <string name="makepay">You will have to make\npayment at the designated\ncheck-in counter at the hospital.\n\nIf you have Discount cards like Medicare or Health card then you will have to show them at the check-in designated counter.\n\nIn case of two "no shows" your mobile number will be blocked from system for future check-ins</string>
    <string name="cash">Cash On Arrival</string>
    <string name="charges">Hospital charges\u002Bconsultant charges\u002BCheck-in charges RS.50</string>
    <string name="amount_pay">Amount to be paid:</string>
    <string name="pay">Payment</string>
    <string name="hospital_info">HospitalCheck.in is a healthcare\n\u0020\u0020\u0020\u0020 platform to help patients</string>
    <string name="activity">ACTIVITIES</string>
    <string name="address">Address</string>
    <string name="sel_location">Select Location</string>
    <string name="location">Location</string>
    <string name="patname">Patient Name</string>
    <string name="hname">Hospital Name</string>
    <string name="hos_info">(a) Visit Specialist Clinic in the Hospital\n(b) Save time by selecting a tentative\nschedule,by avoiding queues for file entry\nand retrieval,payment for registration /\nrevisits,consultant charges.</string>
    <string name="done">DONE</string>
    <string name="time">Visit Date &amp; time</string>
    <string name="total">Total Paid</string>
    <string name="prior">Priority Pass</string>
    <string name="got">Got it!</string>
    <string name="information">If you have a chronic medical condition and needs to be seen on priority please check this option.Extra charges will apply</string>
    <string name="booking_date">Booking Date</string>
    <string name="note">Notes:</string>
    <string name="condition">After making payment you will receive a confirmation e-mail &amp; SMS.Please shown the same at specialist clinic.</string>
    <string name="checkin">CHECK IN</string>
    <string name="confirm_number">Your confirmation number is</string>
    <string name="make_payment">MAKE PAYMENT</string>
    <string name="suggest">Feel free to give your valuable\nsuggestions &amp; your enquiries</string>
    <string name="date">Date</string>
    <string name="appointment">Have you already taken prior appointment?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="log">Login</string>
    <string name="text">We thought a web-checkin would do the job even for a hospital.After all time, convenience, resources are important to hospitals and patients equally.</string>
    <string name="pname"> First Name</string>
    <string name="mother"> Mother\u0027s name</string>
    <string name="fname">Father\u0027s Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="proceeded">PROCEED</string>
    <string name="male">Male</string>
    <string name="lname">Last Name</string>
    <string name="change">Change Hospital</string>
    <string name="term">Terms and Conditions</string>
    <string name="female">Female</string>
    <string name="hnumber">Hospital Number</string>
    <string name="hemail">e-Mail ID</string>
    <string name="login">LOGIN</string>
    <string name="payment">Payment</string>
    <string name="register">Registration Charges:</string>
    <string name="consult">Consultant Charges:</string>
    <string name="rupees">Rs.50</string>
    <string name="rupee">Rs.100</string>
    <string name="rup">Rs.200</string>
    <string name="check">HospitalCheck.in</string>
    <string name="convience">Hospital Checkin\nConvience Charges:</string>
    <string name="internet">Internet Handling Charges:</string>
    <string name="amount">Total amount to be paid:</string>
    <string name="priority">Do you need priority pass??</string>
    <string name="add">add</string>
    <string name="discount">Discount:</string>
    <string name="proceed">Proceed</string>
    <string name="email">Email Address</string>
    <string name="enter">Please Enter 4 Digit Pin</string>
    <string name="re_enter">Please Re-Enter 4 Digit Pin</string>
    <string name="signup">Sign Up</string>
    <string name="name">Full Name</string>
    <string name="id">Email/User Id</string>
    <string name="phone">Phone Number</string>
    <string name="founder_name">Late Shri Burde Sadananda Kamath </string>
    <string name="confirm">Confirm Password</string>
    <string name="founder">Founder</string>
    <string name="life">Lifestyle</string>
    <string name="contact">Contact Us</string>
    <string name="notification">Notification</string>
    <string name="err_fullnm">Please enter your fullname</string>
    <string name="err_email">Please enter your email</string>
    <string name="err_invalidemail">Please enter a valid email</string>
    <string name="err_invalidphone">Please enter a valid phone number</string>
    <string name="err_phone">Please enter your phone number</string>
    <string name="err_digit">Please enter  4 digit pin</string>
    <string name="err_hospital">Please select hospital name</string>
    <string name="err_doctor">Please select doctor name</string>
    <string name="err_special">Please select specialization</string>
    <string name="err_name">Please enter your name</string>
    <string name="err_firstname">Please enter your first name</string>
    <string name="err_lastname">Please enter your last name</string>
    <string name="err_fname">Please enter your father name</string>
    <string name="err_age">Please enter your age</string>
    <string name="detail">Booking Details</string>
    <string name="err_hnumber">Please enter hospital number</string>
    <string name="err_mobile">Please enter  your mobile number</string>
    <string name="err_address">Please enter your address</string>
    <string name="err_location">Please enter  your location</string>
    <string name="err_date">Please select date</string>
    <string name="err_occupation">Please enter your occupation</string>
    <string name="err_time">Please select time</string>
    <string name="err_confrmdigit">Please Re enter 4 digit pin</string>
    <string name="err_pswrd">Please enter your password</string>
    <string name="err_conpswrd">Please Re enter your password</string>
    <string name="err_pswrd_mismatch">Password mismatch</string>
    <string name="network_error">We cannot connect you right now.
	Please check your network settings for connectivity</string>
    <string name="err_server_not_accessible"> Server Not Accessible. Try Again!</string>
    <string name="err_server">Could not Download!</string>
    <string name="err_call">This device is not Configurable to make Calls!</string>
    <string name="err_msg">This device is not Configurable to send Messages!</string>
    <string name="err_browser">No application can handle this request, Please install a webbrowser</string>
    <string name="update_error">A new version of Archana Projects is available.</string>
    <string name="encoding_error">Base64 encoding error. Please Try again.</string>
    <string name="download_error">Could not download. Please try again.</string>
    <string name="retry">Retry</string>
    <string name="no_result">No Results</string>
    <string name="no_record_found">No Records Found</string>
    <string name="conditions">Archaeology is a discipline that is especially helpful in dealing with buried sites and objects, which, once unearthed, contribute to the study of history. But archaeology rarely stands alone. It uses narrative sources to complement its discoveries. However, archaeology is constituted by a range of methodologies and approaches which are independent from history; that is to say, archaeology does not "fill the gaps" within textual sources. Indeed, "historical archaeology" is a specific branch of archaeology, often contrasting its conclusions against those of contemporary textual sources. For example, Mark Leone, the excavator and interpreter of historical Annapolis, Maryland, USA; has sought to understand the contradiction between textual documents and the material record, demonstrating the possession of slaves and the inequalities of wealth apparent via the study of the total historical environment, despite the ideology of "liberty" inherent in written documents at this time.</string>
    <string name="title_activity_absign_in">ABSignInActivity</string>
    <string name="terms">TERMS AND CONDITIONS</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_abregistration">ABRegistrationActivity</string>
    <string name="app_id">328328154014227</string>
    <string name="title_activity_abhome">ABHomeActivity</string>
    <string name="title_activity_ablife_style">ABLifeStyleActivity</string>
    <string name="title_activity_ababoutus">ABAboutusActivity</string>
    <string name="title_activity_abdetail">ABDetailActivity</string>
    <string name="title_activity_hcsign_in">HCSignInActivity</string>
    <string name="title_activity_hcregistration">HCRegistrationActivity</string>
    <string name="title_activity_hcpayment">HCPaymentActivity</string>
    <string name="title_activity_hcselection">HCSelectionActivity</string>
    <string name="hospital_prompt">Select Hospital</string>
    <string-array name="hospital_arrays">
        <item>KMC Manipal</item>
        <item>KMC Udupi</item>
    </string-array>
    <string name="religion_prompt">Select Religion</string>
    <string-array name="religion_arrays">
        <item>Select Religion</item>
        <item>Hindu</item>
        <item>Muslims</item>
        <item>Christans</item>
        <item>Sikhs</item>
        <item>Jains</item>
        <item>Others</item>
    </string-array>
    <string name="names">Wife/Husband Name</string>
    <string name="special_prompt">Select specialization</string>
    <string-array name="special_arrays">
        <item>ET</item>
    </string-array>
    <string name="date_prompt">Select date</string>
    <string-array name="date_arrays">
        <item>12-Sep-2014</item>
    </string-array>
    <string name="docnm_prompt">Doctor name</string>
    <string name="doctor_prompt">Select doctor</string>
    <string-array name="doctor_arrays">
        <item>Select Doctor</item>
        <item>Krishna Prasad</item>
    </string-array>
    <string name="time_prompt">Select time</string>
    <string-array name="time_arrays">
        <item>Select Time</item>
        <item>10:AM</item>
    </string-array>
    <string name="title_activity_hcsignup">HCSignupActivity</string>
</resources>