<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:checkin="http://schemas.android.com/apk/res/com.mavericks.checkin"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_bar"
    tools:context="com.mavericks.checkin.HCRegistrationActivity" >
   
       <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_hospital"   
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hospital"
                    android:layout_centerHorizontal="true"
                      android:layout_marginTop="@dimen/margin_sl"
                      android:layout_alignParentTop="true"
                   checkin:font_type="@integer/fnt_text"
                     />
            
       <com.mavericks.checkin.views.HCTextView
             android:id="@+id/text_log"  
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_sl"
                    android:text="@string/log"
                    android:layout_alignParentRight="true"
                   
                   checkin:font_type="@integer/fnt_btn"
                  
                     />
         <ImageView 
            android:id="@+id/div_lin1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_s"
            android:contentDescription="@string/about"
            android:layout_below="@+id/text_log"
            android:background="@drawable/divider_line"/>
        
            <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
      android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/div_lin1"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/pname"
            checkin:font_type="@integer/fnt_edit_small" />
             
               <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_fname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_name"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/fname"
            checkin:font_type="@integer/fnt_edit_small" />
                  
                    <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_age"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_fname"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/age"
            checkin:font_type="@integer/fnt_edit_small" />
                   
                      <com.mavericks.checkin.views.HCTextView
            android:id="@+id/text_gender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_age"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/gender"
            checkin:font_type="@integer/fnt_btn" />
                  
          <RadioGroup
        android:id="@+id/radio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_below="@+id/text_gender"
        android:orientation="horizontal">
 
         <com.mavericks.checkin.views.HCRadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
              checkin:font_type="@integer/fnt_btn" 
            />
 
         <com.mavericks.checkin.views.HCRadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
              checkin:font_type="@integer/fnt_btn" />
 
    </RadioGroup>
 
         <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_hnumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/radio"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/hnumber"
            checkin:font_type="@integer/fnt_edit_small" />
          
             <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_hnumber"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/mobile"
            checkin:font_type="@integer/fnt_edit_small" />
                
                  <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_hemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_mobile"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/hemail"
            checkin:font_type="@integer/fnt_edit_small" />
                     <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_hemail"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/address"
            checkin:font_type="@integer/fnt_edit_small" />
                  <com.mavericks.checkin.views.HCEditText
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
        android:layout_alignParentLeft="@dimen/margin_ms"
           android:layout_below="@+id/text_address"
            android:layout_marginTop="@dimen/margin_sl"
            android:text="@string/location"
            checkin:font_type="@integer/fnt_edit_small" />
                    <com.mavericks.checkin.views.HCButton
        android:id="@+id/text_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/checkin"
        android:layout_marginBottom="@dimen/margin_s"
        checkin:font_type="@integer/fnt_text" />
                    
                  
</RelativeLayout>
