<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:checkin="http://schemas.android.com/apk/res/com.mavericks.checkin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white" >

        <com.mavericks.checkin.views.HCTextView
            android:id="@+id/text_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/header_line"
            android:gravity="center_horizontal"
            android:text="@string/confirmation"
            checkin:font_type="@integer/fnt_log" />

        <RelativeLayout
            android:id="@+id/rel_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_confirm"
            android:layout_marginLeft="@dimen/margin_lx"
            android:layout_marginTop="@dimen/margin_lx" >

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transaction"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_confirmation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_transaction"
                android:layout_marginTop="@dimen/margin_ms"
                android:text="@string/confirm_number"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_confirmation"
                android:layout_marginTop="@dimen/margin_s"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_pname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_id"
                android:layout_marginTop="@dimen/margin_ms"
                android:text="@string/patname"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_pname"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_hospital"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_pname"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/hname"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_hname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_hospital"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_special"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_hospital"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/special"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_specialization"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_special"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_special"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/address"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_hosaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_address"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_visit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_address"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/time"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_vdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_visit"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_visit"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/total"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_tpaid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_paid"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_prior"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_paid"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/prior"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_priority"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_prior"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_prior"
                android:layout_marginTop="@dimen/margin_sx"
                android:text="@string/patname"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_bdate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/text_date"
                android:layout_alignParentRight="true"
                checkin:font_type="@integer/fnt_texts" />

            <com.mavericks.checkin.views.HCTextView
                android:id="@+id/text_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_date"
                android:layout_marginTop="@dimen/margin_xs"
                android:text="@string/history"
                checkin:font_type="@integer/fnt_texts" />
        </RelativeLayout>

      <RelativeLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/rel_layout"
                android:layout_height="@dimen/edit_height_mmm"
                android:orientation="horizontal" >

                <com.mavericks.checkin.views.HCTextView
                    android:id="@+id/text_done"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginBottom="@dimen/margin_ms"
                    android:background="@drawable/check"
                    android:text="@string/done"
                    checkin:font_type="@integer/fnt_login" />
            </RelativeLayout>

    </RelativeLayout>

</ScrollView>